Fix z-index

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -433,7 +433,7 @@ NO MORE TABLES!! ;)
 }
 
 #glucose {
-	z-index: 999;
+	/*z-index: 999;*/
     background-color: #ea0d6d !important;
     color: #ffffff;
 }
@@ -446,7 +446,7 @@ NO MORE TABLES!! ;)
 
 #patient-select {
 	margin-left: 10px;
-	z-index: 1000;
+	/*z-index: 1000;*/
 }
 
 #patient-select .open > .dropdown-menu {
